Use jdk-9, lombok. Ready for docker.